--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div class="peoples">
                     <input type="text" class="peoples__find" placeholder="Быстрый поиск...">
                     <div class="peoples-block disable">
+                        <!-- TODO: Fix color of status -->
                         <img src="img/Anna.png" alt="" class="peoples-block__avatar">
                         <div class="peoples-block__name">Анна Иванова</div>
                         <div class="peoples-block__workplace">Менеджер, Отдел продаж</div>
@@ -73,6 +74,39 @@
                     <!-- /.info-main -->
                     <div class="info-stats">
                         <div class="info-stats__onlinetime">Последняя активность сегодня в 12:22</div>
+                        <div class="info-stats-blocks">
+                            <div class="info-stats-block">
+                                <div class="info-stats-block__name">
+                                    Уровень риска
+                                </div>
+                                <!-- /.info-stats-block__name -->
+                                <div class="info-stats-block__counter">157</div>
+                                <!-- /.info-stats-block__counter -->
+                            </div>
+                            <div class="info-stats-block">
+                                <div class="info-stats-block__name">
+                                    Продуктивность
+                                </div>
+                                <!-- /.info-stats-block__name -->
+                                <div class="info-stats-block__counter">86%</div>
+                                <!-- /.info-stats-block__counter -->
+                            </div>
+                            <div class="info-stats-block">
+                                <div class="info-stats-block__name">
+                                    Индекс активности
+                                </div>
+                                <!-- /.info-stats-block__name -->
+                                <div class="info-stats-block__counter">2.4%</div>
+                                <!-- /.info-stats-block__counter -->
+                            </div>
+                            <div class="info-stats-block">
+                                <img src="img/check.png" alt="" class="info-stats-block__img">
+                                <img src="img/camera.png" alt="" class="info-stats-block__img">
+                                <img src="img/tv.png" alt="" class="info-stats-block__img">
+                                <img src="img/add.png" alt="" class="info-stats-block__img">
+                            </div>
+                        </div>
+                        <!-- /.info-stats-blocks -->
                     </div>
                     <!-- /.info-stats -->
                 </div>
