--- a/index.html
+++ b/index.html
@@ -73,38 +73,58 @@
                     </div>
                     <!-- /.info-main -->
                     <div class="info-stats">
-                        <div class="info-stats__onlinetime">Последняя активность сегодня в 12:22</div>
+                        <div class="info-stats-time">
+                            <div class="info-stats-time__online">
+                                Последняя активность сегодня в 12:22
+                            </div>
+                            <!-- /.info-stats-time__online -->
+                            <div class="info-stats-time__back">
+                                К списку сотрудников
+                            </div>
+                            <!-- /.info-stats-time__back -->
+                        </div>
+                        <!-- /.info-stats-time -->
                         <div class="info-stats-blocks">
-                            <div class="info-stats-block">
-                                <div class="info-stats-block__name">
+                            <div class="info-stats-blocks-item">
+                                <div class="info-stats-blocks-item__title">
                                     Уровень риска
                                 </div>
-                                <!-- /.info-stats-block__name -->
-                                <div class="info-stats-block__counter">157</div>
-                                <!-- /.info-stats-block__counter -->
+                                <!-- /.info-stats-blocks-item__title -->
+                                <div class="info-stats-blocks-item__counter">
+                                    157
+                                </div>
+                                <!-- /.info-stats-blocks-item__counter -->
                             </div>
-                            <div class="info-stats-block">
-                                <div class="info-stats-block__name">
+                            <!-- /.info-stats-blocks-item -->
+                            <div class="info-stats-blocks-item">
+                                <div class="info-stats-blocks-item__title">
                                     Продуктивность
                                 </div>
-                                <!-- /.info-stats-block__name -->
-                                <div class="info-stats-block__counter">86%</div>
-                                <!-- /.info-stats-block__counter -->
+                                <!-- /.info-stats-blocks-item__title -->
+                                <div class="info-stats-blocks-item__counter">
+                                    86
+                                </div>
+                                <!-- /.info-stats-blocks-item__counter -->
                             </div>
-                            <div class="info-stats-block">
-                                <div class="info-stats-block__name">
+                            <!-- /.info-stats-blocks-item -->
+                            <div class="info-stats-blocks-item">
+                                <div class="info-stats-blocks-item__title">
                                     Индекс активности
                                 </div>
-                                <!-- /.info-stats-block__name -->
-                                <div class="info-stats-block__counter">2.4%</div>
-                                <!-- /.info-stats-block__counter -->
+                                <!-- /.info-stats-blocks-item__title -->
+                                <div class="info-stats-blocks-item__counter">
+                                    2.4
+                                </div>
+                                <!-- /.info-stats-blocks-item__counter -->
                             </div>
-                            <div class="info-stats-block">
-                                <img src="img/check.png" alt="" class="info-stats-block__img">
-                                <img src="img/camera.png" alt="" class="info-stats-block__img">
-                                <img src="img/tv.png" alt="" class="info-stats-block__img">
-                                <img src="img/add.png" alt="" class="info-stats-block__img">
+                            <!-- /.info-stats-blocks-item -->
+                            <div class="info-stats-blocks-images">
+                                <img src="img/check.png" alt="" class="info-stats-blocks__image">
+                                <img src="img/camera.png" alt="" class="info-stats-blocks__image">
+                                <img src="img/tv.png" alt="" class="info-stats-blocks__image">
+                                <img src="img/add.png" alt="" class="info-stats-blocks__image">
                             </div>
+                            <!-- /.info-stats-blocks-item -->
                         </div>
                         <!-- /.info-stats-blocks -->
                     </div>
