--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <!-- /.peoples -->
                 <div class="info">
                     <div class="info-main">
-                        <img src="img/Anna.png" alt="" class="info-main__avatar">
+                        <img src="img/Viktoriya.png" alt="" class="info-main__avatar">
                         <div class="info-main__name">
                             Виктория Беляева
                         </div>
@@ -129,6 +129,119 @@
                         <!-- /.info-stats-blocks -->
                     </div>
                     <!-- /.info-stats -->
+                    <div class="info-anomaly">
+                        <div class="info-anomaly__title">
+                            Аномалии
+                        </div>
+                        <!-- /.anomaly__title -->
+                        <div class="info-anomaly-block"><img src="img/alert.png" alt="" class="info-anomaly-block__img">Использование более одного аккаунта в соцсетях или мессенджерах</div>
+                        <!-- /.info-anomaly-block -->
+                        <div class="info-anomaly-block">
+                            <img src="img/alert.png" alt="" class="info-anomaly-block__img">Первое использование устройста</div>
+                        <!-- /.info-anomaly-block -->
+                        <div class="info-anomaly-block"><img src="img/alert.png" alt="" class="info-anomaly-block__img">Отсутствие более 40 дней</div>
+                        <!-- /.info-anomaly-block -->
+                    </div>
+                    <!-- /.anomaly -->
+                    <div class="info-statistics">
+                        <div class="info-statistics__title">
+                            Основные показатели
+                        </div>
+                        <!-- /.info-statisctics__title -->
+                        <div class="info-statistics__data">
+                            Данные не найдены
+                        </div>
+                        <!-- /.info-statistics__data -->
+                    </div>
+                    <!-- /.info-statistics -->
+                    <div class="info-tables">
+                        <table class="info-tables__categories">
+                            <caption>Приложения и категории</caption>
+                            <tr>
+                                <th>Категории приложений</th>
+                                <th>Время</th>
+                                <th>%</th>
+                                <th>Рост</th>
+                            </tr>
+                            <tr>
+                                <td>Мессенджеры</td>
+                                <td>20:55</td>
+                                <td>18</td>
+                                <td>+2%</td>
+                            </tr>
+                            <tr>
+                                <td>Браузеры</td>
+                                <td>15:11</td>
+                                <td>12</td>
+                                <td>-3%</td>
+                            </tr>
+                            <tr>
+                                <td>Игры</td>
+                                <td>13:11</td>
+                                <td>7</td>
+                                <td>0</td>
+                            </tr>
+                        </table>
+                        <!-- /.info-tables__categories -->
+                        <table class="info-tables__sites">
+                            <caption>Сайты и категории</caption>
+                            <tr>
+                                <th>Категории сайтов</th>
+                                <th>Время</th>
+                                <th>%</th>
+                                <th>Рост</th>
+                            </tr>
+                            <tr>
+                                <td>Поисковики</td>
+                                <td>20:55</td>
+                                <td>18</td>
+                                <td>+2%</td>
+                            </tr>
+                            <tr>
+                                <td>Новостные порталы</td>
+                                <td>15:11</td>
+                                <td>12</td>
+                                <td>-3%</td>
+                            </tr>
+                            <tr>
+                                <td>Сайты с неопределённым...</td>
+                                <td>13:11</td>
+                                <td>7</td>
+                                <td>0</td>
+                            </tr>
+                        </table>
+                        <!-- /.info-tables__sites -->
+                        <table class="info-tables__discipline">
+                            <caption>Дисциплина</caption>
+                            <tr>
+                                <th>Дата</th>
+                                <th>Приход <br>на работу</th>
+                                <th>Уход <br>с работы</th>
+                                <th>Время <br>на работе</th>
+                            </tr>
+                            <tr>
+                                <td>29.02</td>
+                                <td>08:46</td>
+                                <td>08:46</td>
+                                <td>09:06</td>
+                            </tr>
+                            <tr>
+                                <td>28.02</td>
+                                <td>08:27</td>
+                                <td>08:27</td>
+                                <td>08:36</td>
+                            </tr>
+                            <tr>
+                                <td>25.02</td>
+                                <td>08:42</td>
+                                <td>08:42</td>
+                                <td>08:36</td>
+                            </tr>
+                        </table>
+                        <!-- /.info-tables__discipline -->
+                        <!-- TODO: Check margins in tables (adaptive) -->
+                    </div>
+                    <!-- /.info-tables -->
                 </div>
                 <!-- /.info -->
             </div>
